--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-*{
+
+* {
   font-family: "Montserrat", sans-serif;
   margin: 0;
   padding: 0;
@@ -11,43 +12,33 @@
 }
 
 :root {
-    --main-color: #d92323;
-    --text-color: white;
-    --bg-color:black;
+  --main-color: #d92323;
+  --text-color: white;
+  --bg-color: black;
 }
 
-body{
-    background:var(--text-color);
-    color: var(--bg-color);
-}
-
-body.login-body {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+body {
   background: var(--text-color);
-  padding-top: 80px; /* espacio para header */
-  flex-direction: column;
+  color: var(--bg-color);
 }
 
-header{
-    position: fixed;
-    width: 100%;
-    top: 0;
-    right: 0;
-    z-index: 1000;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px 100px;
-    transition: 0.5s ease;
-    background: var(--main-color);
+header {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  right: 0;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 100px;
+  transition: 0.5s ease;
+  background: var(--main-color);
 }
 
 .navbar {
-    display: flex;
-    column-gap: 5rem;
+  display: flex;
+  column-gap: 5rem;
 }
 
 .navbar li {
@@ -66,7 +57,7 @@ header{
   position: absolute;
   left: 0;
   bottom: -4px;
-  width: 0%; /* Comienza invisible */
+  width: 0%;
   height: 2px;
   background: var(--bg-color);
   transition: width 0.2s linear;
@@ -76,100 +67,105 @@ header{
   width: 100%;
 }
 
-.btnlogin{
+.btnlogin {
   padding: 0.7rem 1.4rem;
   color: var(--text-color);
   font-weight: 400;
   border-radius: 0.5rem;
 }
 
-.btnlogin a::after{
+.btnlogin:hover {
+  color: var(--bg-color);
+}
+
+.btnlogin a::after {
   content: "";
   position: absolute;
   left: 0;
   bottom: -4px;
-  width: 0%; /* Comienza invisible */
+  width: 0%;
   height: 2px;
   background: var(--bg-color);
   transition: width 0.2s linear;
 }
 
-.btnlogin:hover{
-  color: var(--bg-color);
-}
-
-.btnlogin:hover::after{
+.btnlogin:hover::after {
   width: 100%;
 }
 
-.btn{
-    padding: 0.7rem 1.4rem;
-    color: var(--text-color);
-    font-weight: 400;
-    border-radius: 0.5rem;
+.btn {
+  padding: 0.7rem 1.4rem;
+  color: var(--text-color);
+  font-weight: 400;
+  border-radius: 0.5rem;
 }
-.btn:hover{
-    color: var(--bg-color);
+
+.btn:hover {
+  color: var(--bg-color);
 }
-.container{
-    height: 180px;
-    width: 100%;
-    min-width: 640px;
-    position: relative;
-    display: flex;
-    align-items: center;
-    background: rgb(2, 3, 7, 0.4);
+
+.container {
+  height: 180px;
+  width: 100%;
+  min-width: 640px;
+  display: flex;
+  align-items: center;
+  background: rgba(2, 3, 7, 0.4);
 }
+
 .container img {
   width: 100%;
   object-fit: cover;
   display: block;
-  position: relative; 
+  position: relative;
   z-index: 1;
 }
-.swiper-pagination-bullet{
-    width: 6px !important;
-    height: 6px !important;
-    border-radius: 0.2rem !important;
-    background: var(--bg-color);
-    opacity: 1 !important;
+
+.swiper-pagination-bullet {
+  width: 6px !important;
+  height: 6px !important;
+  border-radius: 0.2rem !important;
+  background: var(--bg-color);
+  opacity: 1 !important;
 }
 
-.swiper-pagination-bullet-active{
-    width: 1.5rem !important;
-    background: var(--main-color);
+.swiper-pagination-bullet-active {
+  width: 1.5rem !important;
+  background: var(--main-color);
 }
 
-.soporte-form form{
-    margin-top: 150px;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
+.soporte-form form {
+  margin-top: 150px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.soporte-form input,textarea{
-    width: 400px;
-    padding: 14px;
-    margin-bottom: 10px;
-    border-radius: 0.5rem;
-    border: none;
-    outline: none;
-    background: rgb(255, 191, 191);
-}
-.soporte-form textarea{
-    resize: none;
-    height: 200px;
+.soporte-form input,
+.soporte-form textarea {
+  width: 400px;
+  padding: 14px;
+  margin-bottom: 10px;
+  border-radius: 0.5rem;
+  border: none;
+  outline: none;
+  background: rgb(255, 191, 191);
 }
 
-.soporte-form form .soporte-botton{
-    font-weight: 500;
-    color: white;
-    background: var(--main-color);
-    cursor: pointer;
+.soporte-form textarea {
+  resize: none;
+  height: 200px;
 }
 
-.soporte-form form .soporte-botton:hover{
-    background: var(--bg-color);
+.soporte-botton {
+  font-weight: 500;
+  color: white;
+  background: var(--main-color);
+  cursor: pointer;
+}
+
+.soporte-botton:hover {
+  background: var(--bg-color);
 }
 
 .wrapper {
@@ -177,7 +173,7 @@ header{
   background: white;
   border-radius: 20px;
   padding: 40px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -189,25 +185,28 @@ header{
   flex-direction: column;
   align-items: center;
 }
-.wrapper .form-box{
-  align-items: center;
+body.login-body {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: var(--text-color);
+    padding-top: 80px;
+    flex-direction: column;
+}
+.form-box {
   width: 100%;
   padding: 40px;
-}
-
-.wrapper .form-box{
-  position: center;
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  width: 100%;
-  padding: 40px;
 }
 
-.form-box h2{
-  font-size: 2em;
-  color: white;
-  text-align: center;
+.form-box h2 {
+    font-size: 2em;
+    color: black;
+    text-align: center;
 }
-
 .input-box {
   position: relative;
   width: 100%;
@@ -216,18 +215,18 @@ header{
   margin: 30px 0;
 }
 
-.input-box label{
+.input-box label {
   position: absolute;
   top: 50%;
-  left:5px;
-  transform: translateY();
+  left: 5px;
+  transform: translateY(-50%);
   font-size: 1em;
   color: black;
   font-weight: 500;
   pointer-events: none;
 }
 
-.input-box input{
+.input-box input {
   width: 100%;
   height: 100%;
   background: transparent;
@@ -236,11 +235,23 @@ header{
   font-size: 1em;
   color: black;
   font-weight: 600;
-  padding: 0, 35px;
+  padding: 0 35px;
+}
+.input-box input:focus + label,
+.input-box input:not(:placeholder-shown) + label {
+  display: none;
+}
+.input-box input {
+  padding-left: 35px; /* espacio para el label */
+  transition: padding-left 0.3s ease;
 }
 
-.recover{
-  font-size: .9em;
+.input-box input:focus,
+.input-box input:not(:placeholder-shown) {
+  padding-left: 5px; /* texto inicia casi en el borde izquierdo */
+}
+.recover {
+  font-size: 0.9em;
   color: black;
   font-weight: 500;
   margin: -15px 0 15px;
@@ -248,16 +259,16 @@ header{
   justify-content: space-between;
 }
 
-.recover a{
+.recover a {
   color: black;
   text-decoration: none;
 }
 
-.recover a:hover{
+.recover a:hover {
   text-decoration: underline;
 }
 
-.btnIngresar{
+.btnIngresar {
   width: 100%;
   height: 45px;
   background: black;
@@ -269,12 +280,13 @@ header{
   color: white;
   font-weight: 500;
 }
-.ingreso-registro{
-  font-size: .9em;
+
+.ingreso-registro {
+  font-size: 0.9em;
   color: black;
-  text-decoration:center;
   font-weight: 500;
   margin: 25px 0 10px;
+  text-align: center;
 }
 
 .ingreso-registro p a {
@@ -282,6 +294,7 @@ header{
   text-decoration: none;
   font-weight: 600;
 }
-.ingreso-registro p a:hover{
-text-decoration: underline;
+
+.ingreso-registro p a:hover {
+  text-decoration: underline;
 }
