--- a/css/style.css
+++ b/css/style.css
@@ -186,12 +186,24 @@ header {
   background: white;
   border-radius: 20px;
   padding: 40px;
+  margin-top: 100px; /* antes 220px */
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
+.wrapper_registro {
+  width: 440px;
+  background: white;
+  border-radius: 20px;
+  padding: 40px;
+  margin-top: 220px; /* antes 220px */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .wrapper form {
   width: 100%;
   display: flex;
@@ -316,4 +328,8 @@ body.login-body {
 
 .ingreso-registro p a:hover {
   text-decoration: underline;
+}
+
+.form-box.login {
+  margin-top: 20px;
 }
